css/main.css
/* ... */
::selection:window-inactive {
  background: #eaeaea;
  color: #000;
}

input:-webkit-autofill {
  -webkit-box-shadow: 0 0 1000px #FBFBFB inset;
}



/* ----- Header CSS -----------*/
header {
  background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.1));
  background-color: #4900ed;
  animation: rgb 60s infinite alternate reverse;
  z-index: 100000;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 190px;
  padding-top: 30px;
  text-align: center;
  -webkit-transition: .2s;
  -moz-transition: .2s;
  transition: .2s;
}

header .headerPic {
  -webkit-transition: .2s;
  -moz-transition: .2s;
  transition: .2s;
}

header .navPic {
  position:relative;
  display:block;
  text-align:center;
  margin:-250px auto;
  background-image: linear-gradient(rgba(255, 255, 255, 0.2), rgba(0, 0, 0, 0.1));
  background-color:#EE0276;
  animation: rgb 120s infinite alternate;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  transform: scale(0);  

}

.nav {
  height: 54px;
}

.nav .headerPic {
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  transform: scale(0);
}

.nav .navPic {
  display: block;
  height:76px;
  border-radius: 50%;
  width:76px;
  border: #F1F1E4 solid 3px;
  -webkit-transition: 0.2s;
  -moz-transition: 0.2s;
  transition: 0.2s;
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  transform: scale(1);  
}

@keyframes rgb {
  10% {
    background-color: #EE6B02;
  }
  20% {
    background-color: #EE0602;
  }
  30% {
    background-color: #EE0276;
  }
  40% {
    background-color: #9e02EE;
  }
  50% {
    background-color: #022Cee;
  }
  60% {
    background-color: #029dEE;
  }
  70% {
    background-color: #02EEaa;
  }
  80% {
    background-color: #02ee18;
  }
  90% {
    background-color: #43ee02;
  }
  100% {
    background-color: #a8ee02;
  }
}


/* Github ribbon */
.ribbon-wrap {
  position: fixed;
  width: 275px;
  -ms-transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
  transform: rotate(-45deg);
  border-color: #a00;
  border-left: 45px solid transparent;
  border-right: 45px solid transparent;
  border-bottom: 45px solid #a00;
  box-shadow: 0px 6px 5px -5px rgba(0, 0, 0, 0.5);
  z-index: 999999;
  height: 60px;
}

.ribbon-wrap.right {
  left: inherit;
  right: -65px;
  top: 45px;
  -ms-transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg);
}

.ribbon-wrap .trap-ribbon {
  position: absolute;
  left: -28px;
  top: 17px;
  border-bottom: 1px dotted rgba(255, 255, 255, 0.7);
  width: inherit;
  text-align: center;
  height: 40px;
}

.ribbon-wrap .trap-ribbon a {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 15px;
  font-weight: 700;
  color: #d8d8d8;
  text-decoration: none;
  text-shadow: 0 -1px rgba(0, 0, 0, 0.5);
  text-transform: uppercase;
  text-align: center;
  padding:6px;
  line-height: 22px;
  margin:0 0 0 -45px;
  display: inline-block;
  border-top: 1px dotted rgba(255, 255, 255, 0.7);
  transition: color 500ms ease;
}

.ribbon-wrap .trap-ribbon a:hover {
  color: #fff;
  text-shadow: 0 1px rgba(0, 0, 0, 0.85);
}


/* -- Footer -- */
.legend {
  justify-content: center;
  align-items: center;
  border-color: #b6daf2;
  background-position: bottom bottom;
  background-repeat: no-repeat;
  width: 100%;
  height: 10vh;
  font-size: 85%;
}

menu.foot-menu li {
  margin: 3px;
}

menu.foot-menu li a {
  font-size: 90%;
  padding: 0 10px;
}

/* ----- Body Container Context -----*/
main {
  margin-top: 190px;
}


h1.pitch {
  font-size: 500%;
}

.wrapper{
  min-height:40vh;
  padding:3em 0;
}

/* ----- Buttons ------*/
.tryIt {
  width: 250px;
  margin: 2vh auto;
  display: inline-block;
  border-radius: 5px;
  cursor: pointer;
  color: white;
  font-size: 24px;
  padding: 15px 30px;
  transition: all 0.3s;
  font-weight: 700;
  -webkit-transform: translateZ(1px);
}

.tryIt:hover {
  box-shadow: -5px 5px 0 #39393B;
}

.red{
  background: #DC3535;
}

.light-gray{
  background: #777;
}

/* ----- Uncomplicated single-point media query break, again courtesy: toucaan.css ------*/
@media (max-width: 870px) {
  body .hide-on-mobiles {
    display: none;
  }
  body .display-on-mobiles {
    display: inline-block;
  }
  body .divide-in-half {
    width: 90vw;
  }
  body .one-half {
    width: 100%;
  }
  body .one-third {
    width: 100%;
  }
  body .two-third {
    width: 100%;
  }
  body .shrink {
    width: 95%;
  }
}

@media (min-width: 871px) {
  body .hide-on-mobiles {
    display: marker;
  }
  body .display-on-mobiles {
    display: none;
  }
  body .divide-in-half {
    width: 55vw;
  }
  body .one-half {
    width: 50%;
  }
  body .one-third {
    width: 33.33333%;
  }
  body .two-third {
    width: 66.66666%;
  }
  body .shrink {
    width: 90%;
  }
}

/* --- Resusable classes from Toucaan.css */
.left {
  float: left;
  left: 0;
}

.right {
  float: right;
  right: 0;
}

.center {
  text-align: center;
  margin: 0 auto;
}

.centerize {
  margin: 0 auto;
}

.fixed {
  position: fixed;
}

.absolute {
  position: absolute;
}

.top {
  top: 0;
}

.bottom {
  bottom: 0px;
}

.absolute-center {
  margin: auto;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.flex {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
}

.fold {
  min-height: calc(90vh - 45px);
  max-width: 100vw;
}

/* -- Push aside, out & away ---*/
.side-gap {
  margin-right: 5px;
  margin-left: 5px;
}

.top-gap {
  margin-top: 20px;
}

.double-top-gap {
  margin-top: 40px;
}

.bottom-gap {
  margin-bottom: 20px;
}

.double-bottom-gap {
  margin-bottom: 40px;
}

.pad {
  padding: 0.5em 1em;
}

.pad-vertically {
  padding: 1em 0;
}

.pad-horizontally {
  padding: 0 1em;
}

/* -- Text --*/
.justify {
  text-align: justify;
}

.uppercase {
  text-transform: uppercase;
}

.lowercase {
  text-transform: lowercase;
}

.italics {
  font-style: italic;
}

.transience {
  transition: all 1s ease 0s;
}
/* ... */

